# trajopt_ros

./: .travis.yml
trajopt/: CMakeLists.txt
trajopt/cmake/: trajopt-config.cmake.in
trajopt/include/trajopt/: collision_terms.hpp  kinematic_terms.hpp  problem_description.hpp  trajectory_costs.hpp
trajopt/src/: collision_terms.cpp  kinematic_terms.cpp  problem_description.cpp
trajopt/test/: angular_constraint_unit.cpp  cast_cost_attached_unit.cpp  kinematic_costs_unit.cpp
trajopt_examples/: CMakeLists.txt  package.xml
trajopt_examples/launch/: basic_cartesian_plan.launch  collision_comparison.launch  glass_up_right_plan.launch  glass_up_right_plan_ipopt.launch  glass_up_right_plan_nlopt.launch  pagmo_example2.launch  pick_and_place_plan.launch
trajopt_examples/src/: basic_cartesian_plan.cpp  car_seat_demo.cpp  cnts_comparison.cpp  collision_comparison.cpp  costs_comparison.cpp  glass_up_right_plan.cpp  glass_up_right_plan_ipopt.cpp  glass_up_right_plan_nlopt.cpp  pagmo_example.cpp  pagmo_example2.cpp  pagmo_ipopt_example.cpp  pick_and_place_plan.cpp  puzzle_piece_auxillary_axes_plan.cpp  puzzle_piece_plan.cpp
trajopt_ext/cpp_numerical_solvers/: CMakeLists.txt  package.xml
trajopt_ext/cpp_numerical_solvers/cmake/: cpp_numerical_solvers-config.cmake.in
trajopt_ext/osqp_eigen/: CMakeLists.txt
trajopt_ext/pagmo/: CMakeLists.txt
trajopt_ext/vhacd/: CMakeLists.txt
trajopt_ifopt/: CMakeLists.txt  README.md
trajopt_ifopt/examples/: position_example.cpp  velocity_smoother.cpp
trajopt_ifopt/include/trajopt_ifopt/: joint_terms.h  squared_cost.h  variable_sets.h
trajopt_ifopt/include/trajopt_ifopt/constraints/: collision_constraint.h
trajopt_ifopt/src/: collision_constraint.cpp  joint_terms.cpp  squared_cost.cpp
trajopt_ifopt/test/: CMakeLists.txt  cast_cost_unit.cpp  joint_terms_unit.cpp  variable_sets_unit.cpp
trajopt_moveit_examples/src/: puzzle_piece_plan.cpp
trajopt_optimizers/trajopt_pagmo/: CMakeLists.txt
trajopt_optimizers/trajopt_pagmo/src/: pagmo_solver.cpp
trajopt_optimizers/trajopt_pagmo/test/: CMakeLists.txt  joint_position_optimization_unit.cpp
trajopt_sco/: package.xml
trajopt_tools/: CMakeLists.txt
trajopt_utils/include/trajopt_utils/: basic_array.hpp
